--- a/index.qmd
+++ b/index.qmd
@@ -4,12 +4,15 @@ description:  "How to setup Utterance at Quarto website"
 author: "RPythonStudyGroup feat. ChatGPT"
 date: "2024-11-18"
 date-modified: "2024-11-18"
-categories:
-  - Utterance
-  - Setup
-  - Quarto
+categories: [Utterances, Setup, Quarto]
 ---
 
-## Utterance란?
+### Utterance란?
 
 Utterances는 GitHub Issues를 기반으로 웹사이트나 블로그에 댓글 기능을 추가할 수 있는 오픈 소스 도구입니다. 사용자가 댓글을 달면 그 댓글은 지정된 저장소의 Issue로 추가되며, 웹사이트에서 댓글을 관리하고 표시할 수 있습니다.
+
+### 설치
+
+<https://utteranc.es/>
+
+설치는 웹사이트와 저장하고자 하는 원격저장소 모두에서 설치되어 있어야 할 것 같습니다.
